[package]
name = "pl_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15.2", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "bevy_asset",
    "bevy_gltf",
    "tonemapping_luts",
    "png",
    "webgpu"
] }
bevy_flycam = "0.15.0"

[profile.release]
lto = true
opt-level = "z"  # or "s" for size/speed balance